# ConnText-Desktop

./: CMakeLists.txt  ConnText-Desktop.pro  LICENSE  README.md  main.cpp
forms/: mainwindow.ui
sources/: main.cpp  mainwindow.cpp
